# OpenQueue

./: .dockerignore  .env.example  .gitignore  BEGINNER_GUIDE.md  Concept.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  plans.md  pyproject.toml  requirements.txt  schema.sql  vercel.json
.github/workflows/: docker.yml  lint.yml  publish.yml  security.yml  test-multi.yml  test-sdk.yml  test.yml
api/: index.py
app/: __init__.py  auth.py  crud.py  database.py  deps.py  fastapi_app.py  maintenance.py  metrics.py  middleware.py  models.py  rate_limit.py  settings.py
app/core/: __init__.py  app_factory.py
app/routers/: __init__.py  admin.py  dashboard.py  jobs.py  observability.py  workers.py
app/services/: jobs_service.py
app/utils/: __init__.py  generate_token.py
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: auth-sync.tsx  header.tsx  sidebar.tsx  (+2 more)
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init_schema.py  0002_add_clerk_id.py
references/: start.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: producer.py  quickstart.py  worker.py  worker_with_heartbeat.py
sdk/python/openqueue/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_sdk.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
src/: index.py
system-design/: OpenQueue-SystemDesign.excalidraw
tests/: conftest.py  test_api_integration.py  test_concurrency_leasing.py
(+30 files in other folders)
